# SLASH

./: .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  README.md  requirements.txt
driver/libslash/: CMakeLists.txt  README.md
driver/libslash/cmake/: slashConfig.cmake.in
driver/libslash/doc/: Doxyfile
driver/libslash/include/slash/: ctldev.h  hotplug.h  qdma.h
driver/libslash/include/slash/uapi/: slash_hotplug.h  slash_interface.h
driver/libslash/src/: CMakeLists.txt  ctldev.c  ctldev_mock.c  ctldev_mock.h  hotplug.c  qdma.c  qdma_mock.c  qdma_mock.h
driver/libslash/tests/: CMakeLists.txt  ctldev_test.cpp  hotplug_test.cpp  qdma_test.cpp
examples/02_chain/: 02_example.cpp  CMakeLists.txt
examples/02_chain/hls/: dma_in.cfg  dma_out.cfg  passthrough.cfg
linker/: pyproject.toml  pytest.ini
linker/slashkit/: __main__.py
linker/slashkit/core/: bd_ports.py  bus.py  command_config.py  connectivity.py  kernel.py  port.py  regs.py
linker/slashkit/emit/: hls_meta.py  render.py
linker/slashkit/emit/emu/: project_gen.py  tb_ctx.py  tcl_gen.py
linker/slashkit/emit/hw/: project_gen.py  tcl_gen.py
linker/slashkit/emit/hw/service_region/: network_ctx.py  service_layer_ctx.py  stream_ctx.py
linker/slashkit/emit/hw/user_region/: addr_ctx.py  ddr_ctx.py  debug_ctx.py  hbm_ctx.py  host_ctx.py  kernel_ctx.py  mem_ctx.py  param_ctx.py  smartconnect_ctx.py  terminator_ctx.py  virt_ctx.py
linker/slashkit/emit/metadata/: prog_image.py  report_util.py  system_map_ctx.py  timing_freq.py
linker/slashkit/emit/sim/: project_gen.py  tcl_gen.py
linker/slashkit/parser/: component_parser.py  config_parser.py
linker/slashkit/resources/: .gitignore  bd_ports.txt
linker/slashkit/resources/aved/: build_all.sh  pdi_combine.bif  profile_hal.h
linker/slashkit/resources/base/constraints/: impl.xdc  opt.post.tcl  place.pre.tcl
linker/slashkit/resources/base/iprepo/: .gitignore  Makefile
linker/slashkit/resources/base/scripts/: add_constraints.tcl  build_project.tcl  clean_project.tcl  create_project.tcl  enable_dfx_bdc.tcl  make_wrapper.tcl  service_layer.tcl  service_layer_build.tcl  slash_base.tcl  slash_project_build.tcl  top.tcl
linker/slashkit/resources/dcmac/driver/: axi_gt_controller.py  axigpio_mmio.py  dcmac_init.py  dcmac_mmio.py  dcmac_reg.py  default_ip.py  generic_mmio.py  gpio_monitor.py  netlayer_regs.py  network_end2end_test.py  pcie_bar.py  requirements.txt  trafficgen.py  udp_utils.py  utils.py
linker/slashkit/resources/dcmac/hdl/: clock_to_clock_bus.v  serdes_clock.v  syncer_reset.v
linker/slashkit/resources/dcmac/tcl/: dcmac.tcl  dcmac_config.tcl
linker/slashkit/resources/sim/: CMakeLists.txt  sim.cpp  sim.hpp  sim_exec_log.hpp  sim_mem.v  xsi_dut.cpp  xsi_dut.hpp  xsi_loader.cpp  xsi_loader.hpp
linker/slashkit/resources/templates/: service_layer.tcl  sim_prj.tcl  slash.tcl  sw_emu_tb.cpp  system_map.xml
linker/test/fixtures/dma_in/hls/: hls_data.json
linker/test/fixtures/dma_out/hls/: hls_data.json
linker/test/fixtures/passthrough/hls/: hls_data.json
linker/test/parser/: test_component_parser.py  test_config_parser.py
smi/: CMakeLists.txt  README.md
smi/cmake/: version.hpp.in
smi/src/: CMakeLists.txt  bdf.hpp  inspect.cpp  inspect.hpp  list.cpp  list.hpp  program.cpp  program.hpp  reset.cpp  reset.hpp  smi.cpp  utils.hpp  validate.cpp  validate.hpp
smi/src/debug/: bar_poke.cpp  bar_poke.hpp  clockwiz.cpp  clockwiz.hpp  mem_poke.cpp  mem_poke.hpp
vrt/: CMakeLists.txt  README.md
vrt/cmake/: vrtConfig.cmake.in  vrt_version.hpp.in
vrt/include/vrt/: buffer.hpp  device.hpp  kernel.hpp  streaming_buffer.hpp  vrtbin.hpp
vrt/include/vrt/allocator/: allocator.hpp
vrt/include/vrt/driver/: qdma_logic.hpp
vrt/include/vrt/parser/: utilization_data.hpp  utilization_parser.hpp  xml_parser.hpp
vrt/include/vrt/qdma/: pcie_driver_handler.hpp  qdma_connection.hpp  qdma_intf.hpp
vrt/include/vrt/register/: register.hpp
vrt/include/vrt/utils/: filesystem_cache.hpp  logger.hpp  platform.hpp  zmq_server.hpp
vrt/src/: device.cpp  kernel.cpp  vrtbin.cpp
vrt/src/allocator/: allocator.cpp
vrt/src/driver/: qdma_logic.cpp
vrt/src/parser/: utilization_parser.cpp  xml_parser.cpp
vrt/src/qdma/: pcie_driver_handler.cpp  qdma_connection.cpp  qdma_intf.cpp
vrt/src/register/: register.cpp
vrt/src/utils/: filesystem_cache.cpp  logger.cpp  zmq_server.cpp
vrt/tests/: CMakeLists.txt  device_test.cpp  filesystem_cache_test.cpp  kernel_test.cpp  logger_test.cpp  qdma_connection_test.cpp  register_test.cpp  test_helpers.hpp  utilization_data_test.cpp  utilization_parser_test.cpp  vrtbin_integration_test.cpp  vrtbin_test.cpp  xml_parser_test.cpp
vrt/tests/fixtures/stub_vbin/: emu_manifest.json  system_map_emu.xml  system_map_sim.xml  vrt_stub_server.py
vrt/vrtd/: CMakeLists.txt  README.md  STYLE.md
vrt/vrtd/cmake/: ami.cmake  vrtdConfig.cmake.in
vrt/vrtd/conf/: vrtd.conf
vrt/vrtd/include/vrtd/: wire.h
vrt/vrtd/libvrtd/: CMakeLists.txt
vrt/vrtd/libvrtd/doc/: Doxyfile
vrt/vrtd/libvrtd/include/vrtd/: vrtd.h
vrt/vrtd/libvrtd/src/: CMakeLists.txt  buffer.c  requests.c
vrt/vrtd/libvrtdpp/doc/: Doxyfile
vrt/vrtd/libvrtdpp/include/vrtd/: bar.hpp  bar_file.hpp  bar_file_ptr.hpp  buffer.hpp  device.hpp  error.hpp  qdma_qpair.hpp  session.hpp
vrt/vrtd/libvrtdpp/src/: CMakeLists.txt  bar.cpp  bar_file.cpp  buffer.cpp  device.cpp  error.cpp  qdma_qpair.cpp  session.cpp
vrt/vrtd/src/: CMakeLists.txt  accept.c  accept.h  allocator.c  allocator.h  array.h  auth.c  auth.h  buffer.c  buffer.h  clock.c  clock.h  config.c  config.h  design_writer.c  design_writer.h  device.c  device.h  hotplug.c  hotplug.h  main.c  reset.c  reset.h  serve.c  serve.h  signals.c  signals.h  state.h  utils.c  utils.h
vrt/vrtd/systemd/: vrtd.service  vrtd.socket
vrt/vrtd/sysusers/: vrtd.conf
vrt/vrtd/tests/: CMakeLists.txt  allocator_test.cpp  array_test.cpp  auth_test.cpp  buffer_test.cpp  config_test.cpp  design_writer_test.cpp  device_test.cpp  hotplug_test.cpp  test_helpers.hpp  utils_test.cpp
vrt/vrtd/udev/: 99-vrtd.rules
(+173 files in other folders)
